@@ -41,7 +41,7 @@
           <legend i18n:translate="label_location">Location</legend>
           <p i18n:translate="text_select_wg">Select an area in which to work on your content:</p>
 
-          <select name="location" tal:define="optionsmacros context/search_macros/macros">
+          <select name="location" tal:define="optionsmacros context/search_macros/macros" onchange="disableInIE(this);">
             <metal:reuse use-macro="optionsmacros/personalwsoption" />
             <metal:reuse use-macro="optionsmacros/workgroupoptions" />
           </select>
@@ -81,6 +81,84 @@
           <div metal:use-macro="here/module_metadata/macros/keywords" />
 
           <div metal:use-macro="here/module_metadata/macros/abstract" />
+
+    <tal:siyavula condition="context/@@siyavula|nothing">
+    <div class="field"
+        tal:condition="python:context.portal_catalog(portal_type='XMLTemplate')"
+        tal:define="error errors/template_uid| nothing;
+                    template_uid request/template_uid | string:;
+                    templatefolder_uid request/templatefolder_uid | nothing"
+        tal:attributes="class python:test(error, 'field error', 'field')">
+      <label i18n:translate="label_template">Template</label>
+      <div i18n:translate="help_template_creation" class="formHelp">
+        If you wish to base your entire module on a single template, select the
+        appropriate organization and template.
+      </div>
+      <div tal:content="error">Validation error output</div>
+
+      <span tal:replace='structure string:&lt;script type="text/javascript"&gt;&lt;!--'/>
+        function content_title_change_templatefolder(sender)
+        {
+            <tal:folders repeat="folder python:context.portal_catalog(portal_type='XMLTemplateFolder')">
+              var el = document.getElementById('folder-select-' + '<span tal:replace="folder/UID"/>');
+              if (el)
+              {
+                el.name = '';
+                el.style.display = 'none';
+              }
+            </tal:folders>
+
+            var el = document.getElementById('folder-select-dummy');
+            el.name = '';
+            el.style.display = 'none';
+
+            var el = document.getElementById('folder-select-' + sender.value);
+            if (el)
+            {
+                el.name = 'template_uid';
+                el.style.display = 'inline';
+            }
+        }
+      <span tal:replace="structure string:--&gt;&lt;/script&gt;"/>
+     
+      <select name="templatefolder_uid"
+              tal:attributes="tabindex tabindex/next"
+              onChange="content_title_change_templatefolder(this);">
+        <option value="dummy">-- Select --</option>
+        <tal:folders repeat="folder python:context.portal_catalog(portal_type='XMLTemplateFolder')">
+          <option tal:condition="python:context.portal_catalog(portal_type='XMLTemplate', path=folder.getPath())"
+                  tal:attributes="value folder/UID;
+                                  selected python:templatefolder_uid == folder.UID"
+                  tal:content="folder/pretty_title_or_id">
+          </option>
+        </tal:folders>
+      </select>
+
+      <tal:folders repeat="folder python:context.portal_catalog(portal_type='XMLTemplateFolder')">
+      <select name=""
+              tal:define="folderUID folder/UID;
+                          selectedfolder python:folderUID == templatefolder_uid;
+                          displaystyle python:selectedfolder and 'inline' or 'none'"
+              tal:attributes="tabindex tabindex/next;
+                              id string:folder-select-$folderUID;
+                              style string:display:$displaystyle;
+                              name python:selectedfolder and 'template_uid' or None">
+        <option value="">-- Select --</option>
+        <option tal:repeat="template python:context.portal_catalog(portal_type='XMLTemplate', path=folder.getPath())"
+                tal:attributes="value template/UID;
+                                selected python:template_uid == template.UID"
+                tal:content="template/pretty_title_or_id">
+        </option>
+      </select>
+      </tal:folders>
+      <select id="folder-select-dummy"
+              tal:define="showdummy python:not templatefolder_uid or templatefolder_uid == 'dummy';
+                          displaystyle python:showdummy and 'inline' or 'none'"
+              tal:attributes="style string:display:$displaystyle">
+        <option value="">-- Select --</option>
+      </select>
+    </div>
+    </tal:siyavula>
 
         </fieldset>
 
