@@ -258,7 +258,7 @@ can edit or delete this if desired).</li>
           <form id="edit_form" method="post" enctype="multipart/form-data"
                 autocomplete="off"
                 tal:attributes="action template/getId">
-            <textarea id='textarea' name="contents:text" style="width:auto" cols="80" rows="25" 
+            <textarea id='textarea' name="contents:text" wrap="on" style="width:auto" cols="80" rows="25" 
                       tal:define="file here/getDefaultFile; sourcenotblank python:file.getSource() != ''"
                       tal:content="python:validation_errors and (sourcenotblank and file.getSource() or ' ') or file.normalize()">[content]</textarea>
           <input style="display:block" 
