@@ -1,7 +1,10 @@
 from setuptools import setup, find_packages
 import os
 
-version = '0.66.1'
+def read(*rnames):
+    return open(os.path.join(os.path.dirname(__file__), *rnames)).read()
+
+version = read("Products", "RhaptosModuleEditor", "version.txt").strip()
 
 setup(name='Products.RhaptosModuleEditor',
       version=version,
